--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+.calculator{
+  border: 1px solid black;
+  border-radius: 10px;
+  margin: 0 auto;
+  overflow: hidden;
+  font-size: 24px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.screen{
+  max-width: 100%;
+  background: rgb(221, 221, 221);
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  padding: 10px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-end;
 }
 
-.App-link {
-  color: #61dafb;
+.keyboard{
+  display: flex;
+  width: 100%;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.row{
+  display: flex;
+
+ flex-basis: fill;
+}
+.btn{
+  padding: 20px;
+  border: .1px solid black;
+  display: flex;
+
+  flex-basis: fill;
+  background-color: cornsilk;
 }
