--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,45 @@
+
 .calculator{
-  border: 1px solid black;
+  border: 1px solid rgb(110, 110, 110);
   border-radius: 10px;
   margin: 0 auto;
   overflow: hidden;
   font-size: 24px;
+  
 }
 
 .screen{
   max-width: 100%;
-  background: rgb(221, 221, 221);
-
-  padding: 10px;
+  box-shadow: inset 0  0 40px 5px rgb(189, 189, 189);
+  height: 80px;
+  font-size: 34px;
+  padding: 15px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
 }
 
 .keyboard{
-  display: flex;
+  /* display: flex;
+  
+  flex-direction: column; */
+
   width: 100%;
-  flex-direction: column;
 }
 
 .row{
   display: flex;
-
- flex-basis: fill;
 }
 .btn{
   padding: 20px;
-  border: .1px solid black;
+  border: .1px solid rgb(110, 110, 110);
   display: flex;
-
-  flex-basis: fill;
-  background-color: cornsilk;
+  justify-content: center;
+  flex-basis: 40px;
+  flex-grow: 1;
+  background-color: rgb(219, 219, 219);
+  cursor: pointer;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  user-select: none; 
 }
